# gemini-hoops-example

./: .gitignore  CLAUDE.md  README.md  gemini_detect.py  hoop_detect.py  plan.md  pyproject.toml  run.sh
docs/: commit.mdc  effective-code.md  python-formatting-ruff-uv-guide.md  uv.md
